# zero2prod

./: .env  Cargo.toml  Dockerfile  config.yml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20221125155023_create_subscriptions_table.sql
scripts/: init_db.sh
src/: email_client.rs  lib.rs  main.rs  settings.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/handlers/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
