[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Dennoh Peter <mail@dennohpeter.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
config = "0.13.2"
serde = {version = "1.0.147", features = ["derive"]}
uuid = { version = "0.8.2", features = [ "v4"] }
chrono = "0.4.23"
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
secrecy =  {version =  "0.8.0", features = ["serde"]}
tracing-actix-web = "0.6.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
reqwest = {version = "0.11.13", default_features = false, features = ["json", "rustls-tls"]}


[dependencies.sqlx]
version = "0.5.10"
default-features = false
features = [
    "runtime-actix-rustls",
    "postgres", "macros", 
    "uuid", "chrono", 
    "migrate", 
    "offline"
]

[dev-dependencies]
claim = "0.5.0"
fake = "2.5.0"
once_cell = "1.16.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.91"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
wiremock = "0.5.16"
